--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,3 +1,12 @@
+@import "tailwindcss/base";
+// @import "../node_modules/custom-base-styles.css";
+
+@import "tailwindcss/components";
+// @import "../node_modules/custom-components.css";
+
+@import "tailwindcss/utilities";
+// @import "../node_modules/custom-utilities.css";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
