--- a/frontend/src/Components/CardLayout.scss
+++ b/frontend/src/Components/CardLayout.scss
@@ -1,14 +1,31 @@
-.cards-container{
+.cards-container {
   display: flex;
-  flex-flow : column wrap;
-  justify-content : space-evenly;
-  gap : 10px 5px;
-  .card{
+  flex-flow: column wrap;
+  justify-content: space-evenly;
+  gap: 10px 5px;
+  .card {
     height: 100px;
     width: 80px;
     border: blur 1px grey;
-    border-radius : 7%;
-    box-shadow : 0 0 5px 5px rgb(248, 236, 236);
-    padding : 2%;
+    border-radius: 7%;
+    box-shadow: 0 0 5px 5px rgb(248, 236, 236);
+    padding: 2%;
+    cursor: zoom-in;
+    //property to expand
+    display: inline-block;
+    vertical-align: middle;
+    transform: translateZ(0);
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    transition-duration: 0.3s;
+    transition-property: transform;
+    //property to expand ends
   }
+  //property to expand
+  .card:hover,
+  .card:focus,
+  .card:active {
+    transform: scale(2);
+  }
+  //property to expand ends
 }
