--- a/frontend/src/Views/SignUp/SignUp.scss
+++ b/frontend/src/Views/SignUp/SignUp.scss
@@ -24,7 +24,7 @@
         }
     }
     .brand_img {
-        // animation: shake 5s infinite linear;
+        animation: shake 5s infinite linear;
         transition: 5s ease-in-out;
         object-fit: contain;
     }
