--- a/frontend/src/Components/EventCreation/EventCreation.scss
+++ b/frontend/src/Components/EventCreation/EventCreation.scss
@@ -1,5 +1,5 @@
 #form {
-  box-shadow: 5px 0px 5px grey;
+  box-shadow: 0px 0px 5px 5px grey;
   vertical-align: middle;
   text-align: center;
   padding: 2%;
@@ -8,7 +8,7 @@
   background-color: black;
   color: white;
   width: fit-content;
-  h1{
+  h1 {
     font-family: helveticaneuew01-55roma;
   }
   button {
@@ -23,6 +23,7 @@
     }
     input {
       margin: 1%;
+      color: grey;
     }
     display: flex;
     justify-content: space-evenly;
