Got tailwind components working

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,7 +1,7 @@
 @import "tailwindcss/base";
 // @import "../node_modules/custom-base-styles.css";
 
-// @import "tailwindcss/components";
+@import "tailwindcss/components";
 // @import "../node_modules/custom-components.css";
 
 @import "tailwindcss/utilities";
