--- a/frontend/src/Components/Forms/SignUp/SignUpForm.scss
+++ b/frontend/src/Components/Forms/SignUp/SignUpForm.scss
@@ -26,7 +26,10 @@
         background-color: #03a9f4;
         border-color: #03a9f4;
         vertical-align: middle;
-        font-size: 12px;
+        font-size: 18px;
         text-transform: uppercase;
+        margin-right: 1%;
+        
+       
     }
 }
