--- a/frontend/src/Components/Forms/SignUp/SignUpForm.scss
+++ b/frontend/src/Components/Forms/SignUp/SignUpForm.scss
@@ -14,6 +14,10 @@
         border: 1px solid #bdbdbd;
         border-radius: 10px;
         outline-color: #ecd9b9;
+        width: 100%;
+        &.is-invalid-input {
+            border: 1px solid #eb2e24;
+        }
     }
 }
 
