Moved Api/createEvents.js content to index.js

--- a/frontend/src/Components/CardLayout/CardLayout.scss
+++ b/frontend/src/Components/CardLayout/CardLayout.scss
@@ -6,7 +6,7 @@
   .card {
     margin: 2%;
     height: fit-content;
-    width: fit-content;
+    width: 20%;
     border: blur 1px grey;
     border-radius: 7%;
     box-shadow: 0 0 5px 5px rgb(248, 236, 236);
