--- a/frontend/src/Components/CardLayout/CardLayout.scss
+++ b/frontend/src/Components/CardLayout/CardLayout.scss
@@ -9,3 +9,19 @@
 	grid-template-columns: repeat(5, 1fr);
 	grid-gap: 20px;
 }
+
+.page_loader {
+	top: 0;
+	width: 100%;
+    height: 100%;
+    position: absolute;
+    text-align: center;
+    // background: #0000006e;
+    // z-index: 1;
+	svg{
+		top: 50%;
+		color: #000000;
+		font-size: 50px;
+		position: absolute;
+	}
+}
