Adding basic style to navbar

--- a/frontend/src/Components/Navbar/Navbar.scss
+++ b/frontend/src/Components/Navbar/Navbar.scss
@@ -1,6 +1,6 @@
 
 nav{
- margin-top: 30px;
+
   display: block;
   background-color: rgba(238, 156, 156, 0.466);
   height: 55px;
@@ -32,5 +32,10 @@ nav{
 }
 
 .navbar-username {
-  
+  padding: 2%;
+  margin: auto;
+ font-size: 21px;
+
+
+
 }
