--- a/frontend/src/Components/Navbar/Navbar.scss
+++ b/frontend/src/Components/Navbar/Navbar.scss
@@ -1,12 +1,14 @@
 
 nav{
-
+  top: 0;
+  position: fixed;
   display: block;
   background-color: rgba(238, 156, 156, 0.466);
   height: 55px;
   width: 100%;
   border-radius: 5px;
   color:black;
+ 
 }
 
 /* Style the "Login" button */
