Changes to Create event UI

--- a/frontend/src/Components/EventCreation/EventCreation.scss
+++ b/frontend/src/Components/EventCreation/EventCreation.scss
@@ -47,6 +47,9 @@
       margin: 1%;
       color: grey;
     }
+    textarea {
+      color: grey;
+    }
 
     display: flex;
     justify-content: space-between;
