--- a/frontend/src/Components/Navbar/Navbar.scss
+++ b/frontend/src/Components/Navbar/Navbar.scss
@@ -8,6 +8,9 @@ nav{
   width: 100%;
   border-radius: 5px;
   color:black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
  
 }
 
@@ -33,12 +36,21 @@ nav{
   background-color: black;
 }
 
+.addbtn{
+  background: grey;
+  padding: 10px 50px;
+  margin-right: 10px;
+  height: 40px;
+}
+
 .navbar-username {
   padding: 2%;
   margin: auto;
  font-size: 21px;
  color: #d64926b2;;
-
+ display: flex;
+ width: 15%;
+ justify-content: flex-end;
 
 
 }
