changing style for message on nav

--- a/frontend/src/Components/Navbar/Navbar.scss
+++ b/frontend/src/Components/Navbar/Navbar.scss
@@ -63,8 +63,10 @@ nav{
   font-size: 21px;
   color: #d64926b2;
  display: flex;
-//  width: 1%;
+  width: 35%;
+  text-align: center;
  justify-content: center;
+
 
 
 }
