--- a/frontend/src/Components/CardLayout/CardLayout.scss
+++ b/frontend/src/Components/CardLayout/CardLayout.scss
@@ -1,14 +1,12 @@
 .cards_container {
-	// display: flex;
-	// flex-flow: column wrap;
-	// justify-content: space-evenly;
-	// gap: 10px 5px;
 	display: grid;
-	height: 100%;
-	grid-template-rows: repeat(6, 1fr);
-	grid-template-columns: repeat(5, 1fr);
-	grid-gap: 20px;
-	margin-top: 80px;
+    height: 100%;
+    max-height: 400px;
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    margin-top: 80px;
+    padding: 40px 20px;
 }
 
 .page_loader {
