--- a/frontend/src/Components/Footer/Footer.scss
+++ b/frontend/src/Components/Footer/Footer.scss
@@ -4,12 +4,23 @@ li {
 }
 
 footer {
+  height: 5%;
   display: block;
-}
-
-.copyright {
-  background-color: #2F2C23;
-  padding: 20px;
-  color: white;
-  display: block;
+  background-color: #9e0022;
+  color: #feebd6;
+  .wrapper ul {
+    display: flex;
+    justify-content: space-between;
+  }
+  .copyright {
+    background-color: #2f2c23;
+    padding: 20px;
+    color: white;
+    display: flex;
+    flex-basis: 100%;
+    font-size: 12px;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 1%;
+  }
 }
