styles changed for footer and event creation

--- a/frontend/src/Components/EventCreation/EventCreation.scss
+++ b/frontend/src/Components/EventCreation/EventCreation.scss
@@ -1,5 +1,5 @@
 #form {
-  box-shadow: 0px 0px 5px 5px #EE9C9C;// rgb(255, 121, 188);
+  box-shadow: 0px 0px 5px 5px #ee9c9c; // rgb(255, 121, 188);
   vertical-align: middle;
   text-align: center;
   padding: 2%;
@@ -55,6 +55,9 @@
     input {
       margin: 1%;
       color: grey;
+      [type="file"] {
+        background-color: #2f2c23;
+      }
     }
     textarea {
       color: grey;
