--- a/frontend/src/Components/Footer/Footer.scss
+++ b/frontend/src/Components/Footer/Footer.scss
@@ -15,7 +15,7 @@ footer {
   .copyright {
     background-color: #2f2c23;
     padding: 20px;
-    color: white;
+    color: #feebd6;
     display: flex;
     flex-basis: 100%;
     font-size: 12px;
