--- a/frontend/src/Components/EventCard/EventCard.scss
+++ b/frontend/src/Components/EventCard/EventCard.scss
@@ -4,16 +4,13 @@
     margin: 2%;
     box-shadow: 0 0 5px 0px #f1f1f1;
     cursor: pointer;
-    max-height: 300px;
+    min-height: 300px;
     height: 300px;
     overflow: hidden;
-    //property to expand
     display: inline-block;
     vertical-align: middle;
     transform: translateZ(0);
-    backface-visibility: hidden;
-    transition-duration: 0.3s;
-    transition-property: transform;
+    transition: height 0.5s ease-in-out;
     .iconContainer {
         position: absolute;
         right: 20px;
@@ -56,6 +53,14 @@
             font-weight: 500;
             padding: 0 10px;
             font-size: 13px;
+            max-height: 100px;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            text-overflow: ellipsis;
+            padding: 0 30px;
         }
     }
     .eventImg {
@@ -83,9 +88,13 @@
     .card:hover,
     .card:focus,
     .card:active {
-    transform: scale(1.1);
-    // box-shadow: 0 0 5px 5px rgb(247, 180, 180);
-}
+        .eventDesc {
+            white-space: normal;
+            -webkit-line-clamp: unset;
+        }
+        // transform: scale(1.1);
+        height: 500px;
+    }
 //property to expand ends
 
 ._liked {
