--- a/frontend/src/Components/EventCreation/EventCreation.scss
+++ b/frontend/src/Components/EventCreation/EventCreation.scss
@@ -1,4 +1,4 @@
-#form {
+.form {
   box-shadow: 0px 0px 5px 5px #ee9c9c; // rgb(255, 121, 188);
   vertical-align: middle;
   text-align: center;
@@ -55,9 +55,10 @@
     input {
       margin: 1%;
       color: grey;
-      [type="file"] {
-        background-color: #2f2c23;
-      }
+    }
+    input [type="file"] {
+      color: white;
+      //display: none;
     }
     textarea {
       color: grey;
