Basic styling for the button

--- a/frontend/src/Components/Navbar/PopUp.scss
+++ b/frontend/src/Components/Navbar/PopUp.scss
@@ -5,4 +5,13 @@ div {
   height: 100vh;
 }
 
-
+button {
+    min-width: 100px;
+    padding: 16px 32px;
+    border-radius: 1%;
+    background-color: #2f2c23;
+    color : #FEEBD6 ;
+    font-size: 24px;
+    cursor: pointer;
+  
+  }
