--- a/frontend/src/Components/Navbar/Navbar.scss
+++ b/frontend/src/Components/Navbar/Navbar.scss
@@ -58,7 +58,8 @@ nav {
   @include button-style(rgba(0, 0, 0, 0.65), white);
 }
 .profilebtn:hover {
-  background-color: black;
+  background-color: $bkg-color;
+  color: $color;
 }
 
 .navbar-username {
