--- a/frontend/src/Views/SignUp/SignUp.scss
+++ b/frontend/src/Views/SignUp/SignUp.scss
@@ -3,10 +3,7 @@
 .container {
     width: 100%;
     height: 100%;
-   // padding: 40px 0;
-    margin-top: 10%;
-    margin-left: 5%;
-    margin-right: 10%;
+    padding: 40px 0;
     // wrapper class to center the todo app
     .container_wrapper {
         max-width: 800px;
