--- a/frontend/src/Views/SignUp/SignUp.scss
+++ b/frontend/src/Views/SignUp/SignUp.scss
@@ -7,7 +7,9 @@
     // wrapper class to center the todo app
     .container_wrapper {
         max-width: 800px;
-        margin: 0 auto;
+        margin: 3% auto;
+        margin-top: 8%;
+       
         // padding: 2% 0%;
         min-height: 400px;
         position: relative;
