--- a/frontend/src/Components/Navbar/Navbar.scss
+++ b/frontend/src/Components/Navbar/Navbar.scss
@@ -47,11 +47,12 @@ nav {
 
 
 @mixin hover-effect {
+  size: 30px;
   background-color: white;
   color: black;
   transform: scale(1.2);
   transition:  0.3s;
-  border-radius: 10px;
+  border-radius: 20px;
   
 }
 
@@ -93,11 +94,11 @@ nav {
 
 .logo{
   flex: 1;
-  font-size: 18px;
+  font-size: 20px;
   align-items: center;
 }
-li {  
+li  {  
   flex: 1;  
   color: white;
-  font-size: 18px;
+  font-size: 20px;
 } 
