changed color for footer

--- a/frontend/src/Components/Footer/Footer.scss
+++ b/frontend/src/Components/Footer/Footer.scss
@@ -12,10 +12,10 @@ footer {
   .wrapper ul {
     display: flex;
     justify-content: space-between;
-    background-color: #9e0022;
+    background-color: #c20d07c0;
   }
   .copyright {
-    background-color: #2f2c23;
+    background-color: #02020B;
     padding: 20px;
     color: #feebd6;
     display: flex;
