Changed navbar styles

--- a/frontend/src/Components/Forms/SignUp/SignUpForm.scss
+++ b/frontend/src/Components/Forms/SignUp/SignUpForm.scss
@@ -88,8 +88,8 @@
     }
 }
 
-.content_wrapper{
-    margin: 20%;
-    margin-top: 10% ;
-    margin-right: 10%;
-}
+// .content_wrapper{
+//     margin: 20%;
+//     margin-top: 10% ;
+//     margin-right: 10%;
+// }
