--- a/frontend/src/Components/Navbar/Navbar.scss
+++ b/frontend/src/Components/Navbar/Navbar.scss
@@ -20,22 +20,6 @@
 //   border-radius: 2;
 // }
 
-nav {
-  top: 0;
-  position: fixed;
-  display: flex;
-  background-color: #02020B;
-  height: 70px;
-  width: 100%;
-  border-radius: 5px;
-  color: black;
-  // display: flex;
-  //justify-content: space-between;
-   align-items: center;
-   z-index: 9999;
-
- }
-
 // /* Style the "Login" button */
 // .loginbtn {
 //   @include button-style($color, $bkg-color);
@@ -47,13 +31,48 @@ nav {
 
 
 @mixin hover-effect {
-  size: 30px;
-  background-color: white;
-  color: black;
-  transform: scale(1.2);
-  transition:  0.3s;
-  border-radius: 20px;
+	size: 30px;
+	background-color: white;
+	color: black;
+	transform: scale(1.2);
+	transition:  0.3s;
+	border-radius: 20px;
   
+}
+
+
+.navbar_nav {
+	top: 0;
+	position: fixed;
+	height: 65px;
+	width: 100%;
+	color: black;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	z-index: 9999;
+	background-color: #013A6B;
+	background-image: -webkit-linear-gradient(-30deg, #013A6B 60%, #004E95 50%);
+	.nav_container {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		li {
+			color: #ffffff;
+			font-size: 16px;
+		}
+	}
+	.brand_logo {
+		.logo{
+			flex: 1;
+			font-size: 20px;
+			align-items: center;
+			padding: 0px 25px;
+			img {
+				height: 65px;
+			}
+		}
+	}
 }
 
 .loginbtn:hover {
@@ -91,14 +110,3 @@ nav {
 .container {  
   display: flex;  
 }
-
-.logo{
-  flex: 1;
-  font-size: 20px;
-  align-items: center;
-}
-li  {  
-  flex: 1;  
-  color: white;
-  font-size: 20px;
-} 
