--- a/frontend/src/Components/EventCreation/EventCreation.scss
+++ b/frontend/src/Components/EventCreation/EventCreation.scss
@@ -1,25 +1,20 @@
 .form {
-  box-shadow: 0px 0px 5px 5px #ee9c9c; // rgb(255, 121, 188);
+  box-shadow: 0px 0px 5px 5px #A4ABBD;//#ee9c9c; // rgb(255, 121, 188);
   vertical-align: middle;
   text-align: center;
   padding: 2%;
   margin: auto; //0% 1%;
   border: grey;
+
   // background-image: linear-gradient(
   //   to left bottom,
-  //   #de0651,
-  //   #ea4376,
-  //   #f36798,
-  //   #f987b8,
-  //   #fda6d4
-  background-image: linear-gradient(
-    to left bottom,
-    #ee9c9c,
-    #eb8286,
-    #e76771,
-    #e2475e,
-    #db154c
-  );
+  //   #ee9c9c,
+  //   #eb8286,
+  //   #e76771,
+  //   #e2475e,
+  //   #db154c
+  // );
+  background-image: linear-gradient(to left bottom, #2c92fa, #6098eb, #7d9edc, #92a4cc, #a4abbd);
 
   color: white;
   width: fit-content;
