--- a/frontend/src/Components/Navbar/Navbar.scss
+++ b/frontend/src/Components/Navbar/Navbar.scss
@@ -38,13 +38,14 @@
 			}
 		}
 	}
+	.navBtnWrapper {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
 }
 
 .container {  
   display: flex;  
 }
 
-.actionWrapper {
-	display: flex;
-    align-items: center;
-}
