Styled button in eventcreateupdate

--- a/frontend/src/Components/EventCreateUpdate/EventCreateUpdate.scss
+++ b/frontend/src/Components/EventCreateUpdate/EventCreateUpdate.scss
@@ -17,7 +17,7 @@
   );
   color: white;
   border: rgb(255, 255, 255);
-  
+
   width: fit-content;
   //the heading of the form is styled below
   h1 {
@@ -25,7 +25,7 @@
     font-size: 24px;
     letter-spacing: -1.6px;
     word-spacing: 2px;
-    color: black;
+    color: white;
     font-weight: normal;
     text-decoration: none;
     font-style: normal;
@@ -37,7 +37,7 @@
   button {
     margin: auto;
     display: block;
-    background-color: #2f2c23;
+    background-color: #404756;
     border: white;
     padding: 2% 5%;
     border-radius: 5%;
