--- a/frontend/src/Components/Modal/Modal.scss
+++ b/frontend/src/Components/Modal/Modal.scss
@@ -13,8 +13,9 @@
     // height: 40%;
     // width: 40%;
     // background-color: white;
-    width: 800px;
-    height: 500px;
+    width: 100%;
+   // width: 800px;
+    height: 75%;
     box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
     background: #fff;
     color: #000;
@@ -33,4 +34,10 @@
     z-index: 10;
     color: white;
   }
+}
+
+.popup{
+  width: 852px;
+  height: 70%;
+  margin: 0 auto;
 }
