--- a/frontend/src/Components/Footer/Footer.scss
+++ b/frontend/src/Components/Footer/Footer.scss
@@ -29,7 +29,7 @@ footer {
   //   // background-color: #596277;
   // }
   .copyright {
-    background-color: #404756;
+    background-color: #013a6b; //#404756;
     padding: 1px;
 
     display: flex;
