--- a/frontend/src/Components/EventCreation/EventCreation.scss
+++ b/frontend/src/Components/EventCreation/EventCreation.scss
@@ -59,7 +59,8 @@
 // // }
 .tagline {
   text-align: center;
-  color: palevioletred;
+  font-size: xx-large;
+  color: rgb(112, 200, 216);
 }
 
 .save{
@@ -74,6 +75,7 @@
 }
 
 .form{
+  width: 100%;
    div.containr {
     border-radius: 5px;
     background-color: white;
