Added variables and mixins to navbar and searchbar

--- a/frontend/src/Components/Forms/SignUp/SignUpForm.scss
+++ b/frontend/src/Components/Forms/SignUp/SignUpForm.scss
@@ -54,6 +54,7 @@
         color: #616161;
     }
     button {
+        // inheritance
         @extend %default-btn-style;
         color: #ffffff;
         background-color: #03a9f4;
