--- a/frontend/src/Components/SearchBar/SearchBar.scss
+++ b/frontend/src/Components/SearchBar/SearchBar.scss
@@ -1,23 +1,24 @@
+@import '../../Utils/Design-Tokens/CommonScssUtil.scss';
 .searchBar {
     display: flex;
     align-items: center;
     input {
         padding: 2px 10px;
-        border: 1px solid #004e95;
+        border: 1px solid $navbar-gradiant-shade;
         border-radius: 10px;
-        outline-color: #013a6b;
+        outline-color: $navbar-header-shade;
         width: 100%;
-        font-size: 14px;
+        font-size: fontSize(small, s14);
     }
     .searchBtn{
         svg {
             transform: rotate(0.25turn);
             color: #ffffff;
             margin: 0px 6px;
-            font-size: 20px;
+            font-size: fontSize(large, l20);
             margin-top: 4px;
             &:hover, &:active, &:focus{
-                color: #8ec9ff;
+                color: $navbar-search-icon-hover;
             }
         }
     }
