--- a/frontend/src/Components/EventCard/EventCard.scss
+++ b/frontend/src/Components/EventCard/EventCard.scss
@@ -82,13 +82,12 @@
             padding: 0 10px;
             font-size: 13px;
             max-height: 100px;
-            text-overflow: ellipsis;
             overflow: hidden;
             display: -webkit-box;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
             text-overflow: ellipsis;
-            padding: 0 30px;
+            margin: 0 30px;
         }
         .infomation {
             display: flex;
