--- a/frontend/src/Components/Navbar/Navbar.scss
+++ b/frontend/src/Components/Navbar/Navbar.scss
@@ -1,22 +1,20 @@
+@import '../../Utils/Design-Tokens/CommonScssUtil.scss';
 .navbar_nav {
 	top: 0;
 	position: fixed;
 	height: 65px;
 	width: 100%;
-	color: black;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+	color:$color-black-shade-1;
+	@include flex-mixin(row, space-between, center);
 	z-index: 9999;
-	background-color: #013A6B;
-	background-image: -webkit-linear-gradient(-30deg, #013A6B 73%, #004E95 50%);
+	background-color: $navbar-header-shade;
+	background-image: -webkit-linear-gradient(-30deg, $navbar-header-shade 73%, $navbar-gradiant-shade 50%);
 	.nav_container {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
+		//flex mixin
+		@include flex-mixin(row, space-between, center);
 		li {
-			color: #ffffff;
-			font-size: 16px;
+			color: $color-white-shade-1;
+			font-size: fontSize(medium, m16);
 		}
 		.navbtn {
 			svg {
@@ -24,13 +22,13 @@
 			}
 		}
 		.navbtn:hover {
-			color: #d1d1d1;
+			color: $color-grey-shade-5;
 		}
 	}
 	.brand_logo {
 		.logo{
 			cursor: pointer;
-			font-size: 20px;
+			font-size: fontSize(large, l20);
 			align-items: center;
 			padding: 0px 25px;
 			img {
@@ -39,13 +37,11 @@
 		}
 	}
 	.navBtnWrapper {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
+		@include flex-mixin(row, space-between, center);
 	}
 }
 
 .container {  
-  display: flex;  
+  @include flex-mixin(row, unset, unset);
 }
 
