--- a/frontend/src/Utils/Design-Tokens/_variables.scss
+++ b/frontend/src/Utils/Design-Tokens/_variables.scss
@@ -6,14 +6,21 @@ $color-white-shade-4  : #e0e0e0;
 $color-white-shade-5  : #dadada;
 $color-white-shade-6  : #f2f2f2;
 
+//---- Black Color Shade ----//
+$color-black-shade-1: #000000;
+
 //---- Navbar Shades ----//
 $navbar-shade-1: #ffffff;
+$navbar-header-shade: #013A6B;
+$navbar-gradiant-shade: #004E95;
+$navbar-search-icon-hover: #8ec9ff;
 
 //---- Grey Color Shade ----//
 $color-grey-shade-1  : #cbcbcb;
 $color-grey-shade-2  : #bdbdbd;
 $color-grey-shade-3  : #9e9e9e;
 $color-grey-shade-4  : #37474f;
+$color-grey-shade-5  : #d1d1d1;
 
 //---- Peach Color Shade ----//
 $peach-shade-1        :#ffede7;
