--- a/frontend/src/Components/EventCreation/EventCreation.scss
+++ b/frontend/src/Components/EventCreation/EventCreation.scss
@@ -1,62 +1,7 @@
 @import '../../Utils/Design-Tokens/CommonScssUtil.scss';
 
 
-// // .form {
-// //   box-shadow: 0px 0px 5px 5px #ee9c9c; 
-// //   vertical-align: middle;
-// //   text-align: center;
-// //   padding: 2%;
-// //   margin: auto; //0% 1%;
-// //   // border: rgb(255, 255, 255);
-// //   color: black;
-// //   width: fit-content;
-// //   h1 {
-// //     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-// //     font-size: 24px;
-// //     letter-spacing: -1.6px;
-// //     word-spacing: 2px;
-// //     color: black;
-// //     font-weight: normal;
-// //     text-decoration: none;
-// //     font-style: normal;
-// //     font-variant: normal;
-// //     text-transform: none;
-// //     margin: 5%;
-// //   }
-// //   button {
-// //     margin: auto;
-// //     display: block;
-// //     background-color: #03a9f4;
-// //     border: white;
-// //     padding: 2% 5%;
-// //     border-radius: 5%;
-// //   }
-// //   .closeAdd {
-// //     float: right;
-// //   }
-// //   .formElement {
-// //     label {
-// //       margin: 1%;
-// //     }
-// //     input {
-// //       border-color: black;
-// //       margin: 1%;
-// //       width: 100%;
-// //       color: grey;
-// //     }
-// //     input [type="file"] {
-// //       color: black;
-// //       //display: none;
-// //     }
-// //     textarea {
-// //       color: grey;
-// //     }
 
-// //     display: flex;
-// //     justify-content: space-between;
-// //     margin: 1%;
-// //   }
-// // }
 .tagline {
   text-align: center;
   font-size: xx-large;
@@ -136,13 +81,21 @@ input[type=text], select, .desc {
           border: 1px solid #eb2e24;
       }
   }
-  .profileImg {
+  .Img {
       width: 115px;
       height: 110px;
       border: 1px solid #b9b9b9;
-      border-radius: 70px;
+      border-radius: 10px;
       object-fit: cover;
       object-position: top;
   }
 }
 
+.error_message {
+  padding: 20px;
+  border: 1px solid #ef5350;
+  border-radius: 15px;
+  background: #ef5350;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
