Adding required feild validation and style

--- a/frontend/src/Components/EventCreation/EventCreation.scss
+++ b/frontend/src/Components/EventCreation/EventCreation.scss
@@ -32,13 +32,13 @@ label{
   text-align: center;
 }
 
-input, .desc{
+// input, .desc{
   
-  align-items: center;
-  width: 100%;
-  border-color: black;
-  //margin: 5px;
-}
+//   align-items: center;
+//   width: 100%;
+//   border-color: black;
+//   //margin: 5px;
+// }
 input[type=text], .desc{
  
   width: 100%;
